--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Font-awesome
+@import "~font-awesome/css/font-awesome.min.css";
 
 .navbar-laravel {
   background-color: #fff;
