--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,8 +7,18 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-select/dist/css/bootstrap-select.min.css';
+@import '~bootstrap-touchspin/dist/jquery.bootstrap-touchspin.css';
+@import '~bootstrap-datepicker/dist/css/bootstrap-datepicker3.css';
+@import '~bootstrap-tagsinput/src/bootstrap-tagsinput.css';
+
+
+@import  '~nouislider/distribute/nouislider.min.css';
 // Font-awesome
 @import "~font-awesome/css/font-awesome.min.css";
+
+
+
 
 .navbar-laravel {
   background-color: #fff;
