--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,7 +9,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-select/dist/css/bootstrap-select.min.css';
 @import '~bootstrap-touchspin/dist/jquery.bootstrap-touchspin.css';
-@import '~bootstrap-datepicker/dist/css/bootstrap-datepicker3.css';
+//@import '~bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css';
 @import '~bootstrap-tagsinput/src/bootstrap-tagsinput.css';
 
 
