Проверка на работоспособность всех скриптоа JS для dashboard -- Все проверено до вкладки Components -- В шаблоназ меню slider вынесено в отдельные шаблоны

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,6 +16,8 @@
 @import  '~nouislider/distribute/nouislider.min.css';
 // Font-awesome
 @import "~font-awesome/css/font-awesome.min.css";
+// Editors
+@import "~summernote/dist/summernote-bs4.css";
 
 
 
