Проверка на работоспособность всех скриптоа JS для dashboard -- Все проверено -- Вкладка calendar не работает !!Пробую добавить DevExpress

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,9 +19,12 @@
 // Editors
 @import "~summernote/dist/summernote-bs4.css";
 
+// Galary
+@import "~lightbox2/dist/css/lightbox.css";
 
-
-
+// button loaders
+@import "~ladda/dist/ladda-themeless.min.css";
+//
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
