-Переделаны шаблоны страниц. -Навигация и mega-menu вынесены в отдельный шаблон -Создана модель Bank и парсинг этой модели с сайта banki24.by

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,8 +19,8 @@
 // Editors
 @import "~summernote/dist/summernote-bs4.css";
 
-// Galary
-@import "~lightbox2/dist/css/lightbox.css";
+// Galary пока не србатывает watch
+//@import "~lightbox2/src/css/lightbox.css";
 
 // button loaders
 @import "~ladda/dist/ladda-themeless.min.css";
