--- a/Modules/Dev/Resources/assets/css/style.css
+++ b/Modules/Dev/Resources/assets/css/style.css
@@ -1,3 +1,4 @@
+/*grids*/
 #accordion h1 {
     font-size: 20px;
 }
@@ -36,4 +37,11 @@
 
 .option {
     margin-top: 10px;
+}
+
+/*Charts*/
+#chart {
+    height: 500px;
+    width: 50%;
+    margin-left: 20px;
 }
