--- a/public/modules/dev/css/style.css
+++ b/public/modules/dev/css/style.css
@@ -45,3 +45,14 @@
     width: 50%;
     margin-left: 20px;
 }
+
+/*Panels*/
+.box-item {
+    text-align: center;
+    padding-top: 16px;
+    font-size: 16px;
+}
+
+.orange { background: #f39e6c }
+.yellow { background: #f5e5a6 }
+.green { background: #94d7c7 }
